added ios and android to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 .DS_Store
 
+#amplify
+#
+amplify/.config/local-env-info.json
+
 # Xcode
 #
 build/
@@ -21,6 +25,11 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
+
+## Android & ios compatibility
+#
+/ios
+/android
 
 # Android/IntelliJ
 #
